# Ts6-Accessibility-Project

./: .gitignore  DEVELOPER_GUIDE.md  Makefile  README.md  accessibility.js  injector.js  myAccess.js  package-lock.json  package.json  pyproject.toml  run.ps1  setup.ps1  start-teamspeak-mac.sh  start-teamspeak.ps1  start_teamspeak.command
Release/: Makefile
src/: debug_teamspeak.py  dump_dom.py  dump_resources.py  injector.py  launch_debug_only.py  ts_master.py
src/js/: accessibility_rules.js  accessibility_rules_optimized.js  improved_accessibility.js  improved_accessibility_optimized.js  injector.js  router_interceptor.js
